import java.time.LocalDateTime

plugins {
    id 'application'
    id 'checkstyle'
    id 'com.palantir.git-version' version '3.1.0'
    id 'edu.sc.seis.launch4j' version '3.0.6'
    id "io.sentry.jvm.gradle" version "4.11.0"
    id 'jacoco'
    id 'java'
    id 'org.ec4j.editorconfig' version '0.1.0'
}

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

sourceSets {
    main {
        java {
            srcDirs = ['src']
        }
        resources {
            srcDirs = ['resources']
        }
    }
    test {
        java {
            srcDirs = ['unittests']
        }
        resources {
            srcDirs = ['testresources']
        }
    }
}

ext {
    mmlJvmOptions = ['-Xmx1024m']
    data = 'data'
    docs = 'docs'
    lib = 'lib'
    log = 'logs'
    mmconf = 'mmconf'
    fileStagingDir = "${buildDir}/files"

    // Allows setting a dependency on a different MM branch.
    mmBranch = 'master'
    mmBranchTag = mmBranch.equals('master') ? '' : '-' + mmBranch

    mmDir = "${rootDir}/../megamek"
}

dependencies {
    implementation "org.megamek:megamek${mmBranchTag}:${version}"

    implementation 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.2'
    implementation 'org.apache.logging.log4j:log4j-core:2.24.0'
    implementation 'org.apache.pdfbox:pdfbox:2.0.32'
    implementation ('org.apache.xmlgraphics:batik-bridge:1.14') {
        // We don't need the python and javascript engine taking up space
        exclude group: 'org.python', module: 'jython'
        exclude group: 'org.mozilla', module: 'rhino'
        exclude group: 'xml-apis'
    }
    implementation ('org.apache.xmlgraphics:batik-codec:1.14') {
        exclude group: 'xml-apis'
    }
    implementation ('org.apache.xmlgraphics:batik-dom:1.14') {
        exclude group: 'xml-apis'
    }
    implementation 'org.apache.xmlgraphics:batik-rasterizer:1.14'
    implementation 'org.apache.xmlgraphics:batik-svggen:1.14'
    implementation ('org.apache.xmlgraphics:fop:2.9') {
        // We don't need this proprietary module
        exclude group: 'com.sun.media', module: 'jai-codec'
        exclude group: 'xml-apis'
    }
    testImplementation 'org.mockito:mockito-core:5.13.0'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.11.0'

    runtimeOnly 'org.glassfish.jaxb:jaxb-runtime:4.0.5'

    //Required for printing scaled vector graphics (SVG) - EclipseIDE Comipatability.
    runtimeOnly 'xml-apis:xml-apis-ext:1.3.04'

    testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.11.0'
}

application {
    mainClass = 'megameklab.MegaMekLab'
}

checkstyle {
    toolVersion '10.18.1'
    configFile file("config/checkstyle/checkstyle.xml")
    ignoreFailures false
}

jar {
    archiveFileName = "MegaMekLab.jar"
    manifest {
        attributes "Main-Class" : application.mainClass
        attributes "Class-Path" : "${lib}/MegaMek.jar " + (project.sourceSets.main.runtimeClasspath.files
                .findAll { it.name.endsWith(".jar") && !it.name.toLowerCase().startsWith("megamek") }
                .collect { "${lib}/${it.name}" }.join(' '))
        attributes "Add-Opens" : 'java.base/java.util java.base/java.util.concurrent'
        attributes "Build-Date" : LocalDateTime.now()
    }
}

task generateDynamicFiles() {
    doLast {
        new File("${projectDir}/docs/mml-revision.txt").text = versionDetails().gitHashFull
        new File("${projectDir}/MegaMekLab.l4j.ini").text = """# Launch4j runtime config
# you can add arguments here that will be processed by the JVM at runtime
${project.ext.mmlJvmOptions.join('\n')}
"""
    }
}

task stageFiles(type: Copy) {
    description = 'Stages files that are to be copied into the distribution.'

    dependsOn gradle.includedBuild('megamek').task(':megamek:compileJava')
    dependsOn generateDynamicFiles

    from projectDir
    include "${mmconf}/**"
    include "${data}/**"
    include "${docs}/**"
    include 'license.txt'
    include 'SubmitBug.html'
    include "sentry.properties"
    include "*.ini"
    exclude "**/*.psd"

    into fileStagingDir

    doLast {
        mkdir "${fileStagingDir}/${log}"
    }
}

task createStartScripts (type: CreateStartScripts) {
    description = 'Create shell script for generic distribution.'
    applicationName = 'MegaMekLab'
    mainClass = application.mainClass
    outputDir = startScripts.outputDir
    classpath = jar.outputs.files + files(project.sourceSets.main.runtimeClasspath.files)
            .filter { it.name.endsWith(".jar") }
    defaultJvmOpts = project.ext.mmlJvmOptions
}

distributions {
    main {
        distributionBaseName = 'MegaMekLab'
        contents {
            from ("${mmDir}/megamek/mmconf/log4j2.xml") {
                exclude 'log4j2.xml'
            }
            from (fileStagingDir) {
                exclude 'history.txt'
            }
            from ("${mmDir}/megamek/build/libs/MegaMek.jar") {
                into "${lib}"
            }
            from ("${projectDir}/scripts") {
                rename "shell.sh", "MegaMekLab.sh"
            }
            from (jar)
            from (project.sourceSets.main.runtimeClasspath.files
                    .findAll { it.name.endsWith(".jar") && !it.name.toLowerCase().startsWith("megamek") }) {
                into "${lib}"
            }

            from ("${buildDir}/launch4j") {
                include '*.exe'
            }
            from(jar) {
                into "${lib}"
            }
            duplicatesStrategy = 'exclude'
        }
    }
}

launch4j {
    description = 'Create Windows executable for MegaMekLab'
    mainClassName = application.mainClass
    outfile = "MegaMekLab.exe"
    icon = "${projectDir}/data/images/misc/megameklab.ico"
    jarTask = project.tasks.jar
    internalName = 'MegaMekLab'
    downloadUrl = 'https://github.com/MegaMek/megamek/wiki/Updating-to-Adoptium-(Eclipse-Temurin-Open-Source-Java)'
    supportUrl = 'https://megamek.org'
    copyright = '2024 MegaMek Development Team.'
    trademarks = 'MechWarrior, BattleMech, `Mech and Aerotech - The The Topps Company, Inc. Catalyst Game Labs - InMediaRes Productions, LLC.'
    companyName = "MegaMek Development Team"
    jvmOptions = project.ext.mmlJvmOptions
    jreMinVersion = '17'
    dontWrapJar = true
    messagesJreVersionError = 'We require a Java Runtime of version 17 or higher installed. https://github.com/MegaMek/megamek/wiki/Updating-to-Adoptium-(Eclipse-Temurin-Open-Source-Java)'
    messagesJreNotFoundError = 'Go here for instructions on installing the correct version of Java: https://github.com/MegaMek/megamek/wiki/Updating-to-Adoptium-(Eclipse-Temurin-Open-Source-Java)'
}

tasks.register("packagePrepWork") {
    description = 'General Catch All for all distributions'
    dependsOn stageFiles
    dependsOn startScripts
    dependsOn createStartScripts
    dependsOn createAllExecutables
}

distZip {
    description = 'Creates zip Package'
    enabled = false
    dependsOn packagePrepWork
}

distTar {
    description = 'Creates a TGZ package'
    dependsOn packagePrepWork
    archiveExtension = 'tar.gz'
    compression = Compression.GZIP
}

// The distribution plugin adds the distro packages to the assemble task, which causes the build task
// to run all the packaging tasks.
task assemble(overwrite: true) {
    dependsOn jar
}

// Replace the assembleDist task created by the distributions plugin to create the packages we want to
task assembleDist(overwrite: true) {
    description = 'Build unix, Windows, and source packages'
    group = 'distribution'
    dependsOn test
    dependsOn distTar
}

test {
    useJUnitPlatform()
    // report is always generated after tests run
    finalizedBy jacocoTestReport
}

jacocoTestReport {
    // tests are required to run before generating the report
    dependsOn test
    reports {
        xml.required = true
        html.required = true
    }
}

task processSystemTest(type: JavaExec, dependsOn: stageFiles) {
    description = 'Internal System Test. Dev use only.'
    group = 'other'
    classpath = sourceSets.main.runtimeClasspath
    mainClass = 'megameklab.printing.CGLMassPrinter'
}

task cleanAll() {
    description = 'Cleans all related projects to ensure a proper build.'
    group ='build'
    dependsOn gradle.includedBuild('megamek').task(':megamek:clean')
    dependsOn clean
}

tasks.withType(Checkstyle) {
    minHeapSize = "200m"
    maxHeapSize = "1g"
    reports {
        xml.required = false
        html.required = true
    }
}
